# gh-pilot

./: .gitignore  Cargo.toml  README.md  gh-mission-control
.github/workflows/: ci.yml  release.yml
script/: build
src/: app.rs  main.rs  registry.rs  session.rs  status.rs  store.rs  terminal.rs  tmux.rs  ui.rs
