[package]
name = "gh-pilot"
version = "0.1.0"
edition = "2021"
description = "Terminal session manager for AI coding agents (gh extension)"
license = "MIT"

[[bin]]
name = "gh-pilot"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rusqlite = { version = "0.39", features = ["bundled"] }
anyhow = "1"
portable-pty = "0.9"
vt100 = "0.16"
shell-words = "1.1"
