[package]
name = "gh-pilot"
version = "0.1.0"
edition = "2024"
description = "Terminal session manager for AI coding agents"
license = "MIT"

[[bin]]
name = "gh-pilot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["process", "rt-multi-thread", "sync"] }
